# iis-preverjanje

./: .gitignore  README.md  data.dvc  pyproject.toml
.dvc/: config
src/data/: drift_report.py  process_data.py
