[tool.poetry]
name = "iis-preverjanje"
version = "0.1.0"
description = ""
authors = ["NikolaVilar <nikola.jordanovski@tridenstechnology.com>"]
readme = "README.md"
packages = [{include = "iis_preverjanje"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
evidently = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
